Kubernetes/command-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-service-deployment
  labels:
    app: command-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
      - name: command-service
        image: cranberrywine/command-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: command-service-node-port-service
spec:
  type: NodePort
  selector:
    app: command-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: command-service-cluster-ip-service
spec:
  selector:
    app: command-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
