Kubernetes/platform-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-service-deployment
  labels:
    app: platform-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
      - name: platform-service
        image: cranberrywine/platform-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: platform-service
spec:
  type: NodePort
  selector:
    app: platform-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
