Kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: emreaka.net
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platform-service-cluster-ip-service
                port:
                  number: 8080
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: command-service-cluster-ip-service
                port:
                  number: 8080
